PSS now has its own unique icon

--- a/PSS/PSS/Pages/_Host.cshtml
+++ b/PSS/PSS/Pages/_Host.cshtml
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="~/css/Shared.css" rel="stylesheet" />
     <script src="PSS.js"></script>
-    <link rel="icon" href="gphotos icon.png">
+    <link rel="icon" href="PSS Icon.png">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet"> @*https://stackoverflow.com/questions/50303454/how-to-use-the-new-material-design-icon-themes-outlined-rounded-two-tone-and*@
 </head>
 
