--- a/PSS/PSS/wwwroot/css/Memories.css
+++ b/PSS/PSS/wwwroot/css/Memories.css
@@ -2,6 +2,43 @@
     user-select: none;
 }
 
+header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: fixed;
+    z-index: 999;
+    top: 5px;
+    left: 171px;
+    height: 56px;
+    width: 100%;
+    padding-bottom: 6px;
+    border-bottom: 1px solid gray;
+    background-color: black;
+}
+
+header > span {
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+header > select, header > input[type="number"] {
+    margin-right: 10px;
+    color: white;
+    background-color: black;
+    outline: 2px solid white;
+    border: none;
+}
+
+input[type='number'] {
+    width: 30px;
+    -moz-appearance: textfield;
+}
+
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
 #mainDiv {
     display: flex;
     flex-direction: row;
