Make day input smaller and remove its title attribute

--- a/PSS/PSS/Pages/Memories.razor
+++ b/PSS/PSS/Pages/Memories.razor
@@ -1,4 +1,4 @@
-﻿@page "/memories"
+@page "/memories"
 
 <link rel="stylesheet" href="css/Memories.css">
 <title>Memories - PSS</title>
@@ -21,7 +21,7 @@
         <option value="December">December</option>
     </select>
     
-    <input type="number" min="1" max="@maxDay" @bind="@SelectedDay"/>
+    <input title="" type="number" min="1" max="@maxDay" @bind="@SelectedDay"/>
 </header>
 
 <div id="mainDiv">
