--- a/PSS/PSS/Pages/Memories.razor
+++ b/PSS/PSS/Pages/Memories.razor
@@ -59,13 +59,30 @@
             else if (value is < 1 or > 31) _selectedDay = 1;
         }
     }
-    
-    private static List<C.MediaRow> memories;
-    
+
+    ///Groups each memory by its year.
+    private static Dictionary<int, List<C.MediaRow>> grouped;
+
     protected override void OnInitialized()
     {
         _selectedMonth = DateTime.Today.ToString("MMMM");
         _selectedDay = DateTime.Today.Day;
-        // memories = C.LoadMemories(selectedDate);
+        grouped = new Dictionary<int, List<C.MediaRow>>();
     }
+
+    private static void LoadMemories()
+    {
+        //Get all the items taken on this month and day and group them by their DT year.
+        foreach (C.MediaRow memory in C.LoadMemories(SelectedMonth, SelectedDay))
+        {
+            if (!grouped.ContainsKey(memory.dateTaken!.Value.Year))
+                grouped.Add(memory.dateTaken!.Value.Year, new List<C.MediaRow>());
+            else
+                grouped[memory.dateTaken!.Value.Year].Add(memory);
+        }
+
+        // foreach (KeyValuePair<int, List<C.MediaRow>> kvPair in grouped)
+            // kvPair.Value.Sort((x, y) => x.dateTaken!.Value.CompareTo(y));
+    }
+
 }
