--- a/PSS/PSS/Pages/Memories.razor
+++ b/PSS/PSS/Pages/Memories.razor
@@ -5,7 +5,7 @@
 
 <header>
     <span>Memories From</span>
-    
+
     <select name="months" id="months" autocomplete="on" @bind="@SelectedMonth" @bind:event="oninput">
         <option value="January">January</option>
         <option value="February">February</option>
@@ -20,16 +20,35 @@
         <option value="November">November</option>
         <option value="December">December</option>
     </select>
-    
+
     <input title="" type="number" min="1" max="@maxDay" @bind="@SelectedDay"/>
+
+    <button class="textBtn" @onclick="@LoadMemories" style="margin-left: 10px">
+        <span class="material-icons-outlined">history</span><span>Load Memories</span>
+    </button>
 </header>
 
-<div id="mainDiv">
+@{
+    if (grouped.Count == 0)
+    {
+        return;
+    }
     
-</div>
+    <div id="mainDiv">
+        @foreach (KeyValuePair<int, List<C.MediaRow>> group in grouped)
+        {
+            <span>@group.Key</span>
+            <div>
+                @foreach (C.MediaRow memory in group.Value)
+                {
+                    <img src="@S.LIB_REQUEST_PATH/@memory.path" alt="@S.LIB_REQUEST_PATH/@memory.path"/>
+                }
+            </div>
+        }
+    </div>
+}
 
 @code{
-
     private static string _selectedMonth;
     private static int maxDay, _selectedDay;
     private static string SelectedMonth
