--- a/PSS/PSS/Shared/NavMenu.razor
+++ b/PSS/PSS/Shared/NavMenu.razor
@@ -34,7 +34,7 @@
     <a href="upload"><span class="material-icons-outlined">&#xe2c3;</span><span>Upload</span></a>
     <a href="starred"><span class="material-icons-outlined">&#xf06f;</span><span>Starred</span></a>
     <a href="no-dt"><span class="material-icons-outlined">help_outline</span><span>No DT</span></a>
-    <a href="memories"><span class="material-icons-outlined">schedule</span><span>Memories</span></a>
+    <a href="memories"><span class="material-icons-outlined">history</span><span>Memories</span></a>
     <a href="search"><span class="material-icons-outlined">&#xe8b6;</span><span>Search</span></a>
     <a href="trash"><svg width="24px" height="24px" class="material-icons-outlined" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg><span>Trash</span></a>
     <a href="settings"><span class="material-icons-outlined">&#xe8b8;</span><span>Settings</span></a>
