--- a/PSS/PSS/wwwroot/css/Memories.css
+++ b/PSS/PSS/wwwroot/css/Memories.css
@@ -34,6 +34,16 @@ input[type='number'] {
     width: 40px;
 }
 
+h1 {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    text-align: center;
+    user-select: none;
+}
+
 #mainDiv {
     display: flex;
     flex-direction: column;
