--- a/PSS/PSS/Pages/Index.razor
+++ b/PSS/PSS/Pages/Index.razor
@@ -17,7 +17,7 @@
 
     const string topQuery = "SELECT path, date_taken, date_added, starred, uuid, thumbnail FROM media WHERE separate = false AND date_taken < @oldestOrNewestDT ORDER BY date_taken DESC LIMIT 50";
     const string bottomQuery = "SELECT path, date_taken, date_added, starred, uuid, thumbnail FROM media WHERE separate = false AND date_taken > @oldestOrNewestDT ORDER BY date_taken DESC LIMIT 50";
-    <LibraryContentViewer NotNullDTQueryTop="@topQuery" NotNullDTQueryBottom="@bottomQuery"
+    <LibraryContentViewer @bind-HeaderVis="@headerVis" NotNullDTQueryTop="@topQuery" NotNullDTQueryBottom="@bottomQuery"
         NullDTQuery="SELECT path, date_taken, date_added, starred, uuid, thumbnail FROM media WHERE separate = false AND date_taken IS NOT NULL ORDER BY date_taken DESC LIMIT 50"/>
     
     <TwoChoiceInput YesBtnIcon="star" NoBtnIcon="star_outline" YesBtnText="Add" NoBtnText="Remove" @bind-TwoChoiceVis="@starChoiceVis" YesBtnClick="@(() => UpdateStars(true))" NoBtnClick="@(() => UpdateStars(false))" Message="@(selectedItems.Count > 1 ? "Add or remove stars for selected items?" : "Add or remove star for selected item?")"/>
